--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                         <option lang="es" value="Español" selected>Español</option>
                         <option lang="en" value="English">English</option>
                     </select>
-                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+                    <svg class="arrow" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
                         <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
                     </svg>
                 </div>
-                <a id="signup" class="btn" type="submit">
+                <a id="signup" class="btn" type="submit" href="views/login.html">
                     Iniciar sesión
                 </a>
             </div>
@@ -37,7 +37,7 @@
             </div>
             <div class="login">
                 <div id="title" class="texto">
-                    <h1>Películas y series ilimitadas y mucho más.</h1>
+                    <h1>Películas y series ilimitadas y mucho más</h1>
                     <h2>Disfruta donde quieras. Cancela cuando quieras.</h2>
                 </div>
                 <div class="email">
